SubBt/force-app/main/default/objects/Account_Payable__c/Account_Payable__c.object-meta.xml
<CustomObject>
    <description>Accounts Payable (AP). This will be any payable that gets created.  For instance, Purchase Orders.</description>
    <label>Invoice (PO)</label>
    <nameField>
        <displayFormat>INV - {00000}</displayFormat>
        <label>Invoice (PO)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices (PO)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>