SubBt/force-app/main/default/objects/Account_Payable__c/fields/Accounting_Year__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Year__c</fullName>
    <formula>LEFT(  Accounting_Period__r.Name ,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accounting Year</label>
    <type>Text</type>
</CustomField>