SubBt/force-app/main/default/objects/Account_Payable__c/fields/AP_Number__c.field-meta.xml
<CustomField>
    <fullName>AP_Number__c</fullName>
    <formula>Project__r.Auto_Number__c &amp;&apos;-&apos;&amp; Auto_Number1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice #</label>
    <type>Text</type>
</CustomField>