SubBt/force-app/main/default/objects/Account_Payable__c/fields/Bill_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Received_Date__c</fullName>
    <description>Date Bill document was received internally</description>
    <inlineHelpText>Date Bill AP document was received internally</inlineHelpText>
    <label>Invoice Received Date</label>
    <type>Date</type>
</CustomField>