SubBt/force-app/main/default/objects/Account_Payable__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Contact that will be receiving the Payment.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Payables</relationshipName>
    <type>Lookup</type>
</CustomField>