SubBt/force-app/main/default/objects/Account_Payable__c/fields/Cost_Code__c.field-meta.xml
<CustomField>
    <fullName>Cost_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Code</label>
    <referenceTo>Cost_Codes__c</referenceTo>
    <relationshipName>Payables</relationshipName>
    <type>Lookup</type>
</CustomField>