SubBt/force-app/main/default/objects/Account_Payable__c/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <inlineHelpText>Date the Bill was received.</inlineHelpText>
    <label>Date Bill Received</label>
    <type>Date</type>
</CustomField>