SubBt/force-app/main/default/objects/Account_Payable__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Date the Bill is due.</description>
    <inlineHelpText>Date the Bill is due.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>