SubBt/force-app/main/default/objects/Account_Payable__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Employee that will be receiving the Payment</inlineHelpText>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Payables</relationshipName>
    <type>Lookup</type>
</CustomField>