SubBt/force-app/main/default/objects/Account_Payable__c/fields/Expense_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Expense_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense GL Account</label>
    <referenceTo>GL_Account__c</referenceTo>
    <relationshipName>Payables1</relationshipName>
    <type>Lookup</type>
</CustomField>