SubBt/force-app/main/default/objects/Account_Payable__c/fields/External_Payable__c.field-meta.xml
<CustomField>
    <fullName>External_Payable__c</fullName>
    <inlineHelpText>Used for tracking the External Payable number from another system.</inlineHelpText>
    <label>External Payable Number</label>
    <length>75</length>
    <type>Text</type>
</CustomField>