SubBt/force-app/main/default/objects/Account_Payable__c/fields/Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount__c</fullName>
    <description>Total - Discount</description>
    <formula>/*buildertek__Total_Tax__c - buildertek__Discount_Amount__c -  buildertek__Processing_Discount_Received__c*/

 (Total__c +  Tax_Amount__c ) - (Discount_Amount__c +  Processing_Discount_Received__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total amount minus discount amount and processing discount received.</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>