SubBt/force-app/main/default/objects/Account_Payable__c/fields/Payments__c.field-meta.xml
<CustomField>
    <fullName>Payments__c</fullName>
    <inlineHelpText>Payments that have been made against the Purchase Order.</inlineHelpText>
    <label>Cash Disbursements</label>
    <summarizedField>Payment__c.Payment_Amount__c</summarizedField>
    <summaryForeignKey>Payment__c.Payable__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>