SubBt/force-app/main/default/objects/Account_Payable__c/fields/Processing_Discount_Received__c.field-meta.xml
<CustomField>
    <fullName>Processing_Discount_Received__c</fullName>
    <label>Processing Discount Received ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>