SubBt/force-app/main/default/objects/Account_Payable__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <label>Purchase Order</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Purchase_Order__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipName>Accounts_Payables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>