SubBt/force-app/main/default/objects/Account_Payable__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
            </value>
            <value>
                <fullName>Bill Received</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Pending Payment</fullName>
                <isActive>false</isActive>
                <label>Pending Payment</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <isActive>false</isActive>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>Submitted Pending Approval</fullName>
                <isActive>false</isActive>
                <label>Submitted Pending Approval</label>
            </value>
            <value>
                <fullName>Unpaid</fullName>
                <isActive>false</isActive>
                <label>Unpaid</label>
            </value>
            <value>
                <fullName>Unsubmitted</fullName>
                <isActive>false</isActive>
                <label>Unsubmitted</label>
            </value>
            <value>
                <fullName>Waiting for Approval</fullName>
                <isActive>false</isActive>
                <label>Waiting for Approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>