SubBt/force-app/main/default/objects/Account_Payable__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Vendor that will be receiving the payment.</inlineHelpText>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Accounts_Payables</relationshipName>
    <type>Lookup</type>
</CustomField>