SubBt/force-app/main/default/objects/Account_Payable__c/recordTypes/Existing_Payable.recordType-meta.xml
<RecordType>
    <fullName>Existing_Payable</fullName>
    <active>true</active>
    <label>Existing Payable</label>
</RecordType>