SubBt/force-app/main/default/objects/Account_Payable__c/listViews/Unpaid_Bills.listView-meta.xml
<ListView>
    <fullName>Unpaid_Bills</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Terms__c</columns>
    <columns>Total_Tax__c</columns>
    <columns>Project__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Vendor__c</columns>
    <columns>Purchase_Order__c</columns>
    <columns>Employee__c</columns>
    <columns>Contact__c</columns>
    <columns>Aging__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Balance__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Paid</value>
    </filters>
    <label>Unpaid Bills</label>
</ListView>